--- a/index.html
+++ b/index.html
@@ -3,51 +3,71 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Barbernet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   <body>
+    <nav class="navbar bg-light">
+        <div class="container">
+            <img class="img-fluid" src="C:\Users\Nickson\OneDrive\Documentos\SENA\LOGOTIPO.jpg" alt="logotipo" width="15%" height="auto">
+            <h3><a class="nav-link" href="#">Tutoriales</a></h3>
+            <h3><a class="nav-link" href="#">Blog</a></h3>
+            <h3><a class="nav-link" href="#">Productos</a></h3>
+            <h3><a class="nav-link" href="#">Agendar cita</a></h3>
+        </div>
+      </nav>
     <div class="container">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="C:\Users\Nickson\OneDrive\Documentos\SENA\LOGO BARBERNET.jpg">
+                <img class="img-fluid" src="C:\Users\Nickson\OneDrive\Documentos\SENA\BIENVENIDA.PNG">
             </div>
             <div class="col">
-            <button type="button" class="btn btn-outline-secondary">TUTORIALES</button>
-            <div class="card">
-                <img class="card-img-top" alt="Tutoriales de barberia">
-                <div class="card-body">
-                    <h5 class="card-title">Tutoriales</h5>
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+                <img class="card-img-top" src="C:\Users\Nickson\OneDrive\Documentos\SENA\foto tutorial-2.png" alt="Tutoriales de barberia">
+                <div class="card-body"> 
+                    <h4 class="card-title">Tutoriales</h4>
                     <p class="card-text"><small class="text-muted">¿Como hacer un high fade?</small> </p>
-                </div>
+                </div>            
             </div>
             </div>
             <div class="col">
-            <button type="button" class="btn btn-outline-secondary">BLOG</button>
-            <div class="card">
-                <img class="card-img-top" alt="Tutoriales de barberia">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+                <img class="card-img-top" src="C:\Users\Nickson\OneDrive\Documentos\SENA\foto blog.png" alt="Tutoriales de barberia">
                 <div class="card-body">
-                    <h5 class="card-title">Blog</h5>
+                    <h4 class="card-title">Blog</h4>
                     <p class="card-text"><small class="text-muted">5 tips para diferenciar tu barberia</small> </p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </div>
             </div>
             </div>
             <div class="col">
-            <button type="button" class="btn btn-outline-secondary">PRODUCTOS</button>
-            <div class="card">
-                <img class="card-img-top" alt="Tutoriales de barberia">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+                <img class="card-img-top" src="C:\Users\Nickson\OneDrive\Documentos\SENA\foto producto.png" alt="Tutoriales de barberia">
                 <div class="card-body">
-                    <h5 class="card-title">Productos</h5>
+                    <h4 class="card-title">Productos</h4>
                     <p class="card-text"><small class="text-muted">Locion After Shave</small> </p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </div>
             </div>
             </div>
             <div class="col">
-            <button type="button" class="btn btn-outline-secondary">RESERVAR</button>
-            <div class="card">
-                <img class="card-img-top" alt="Tutoriales de barberia">
+            <div class="card shadow-lg p-3 mb-5 bg-body rounded">
+                <img class="card-img-top" src="C:\Users\Nickson\OneDrive\Documentos\SENA\foto reserva.png" alt="Tutoriales de barberia">
                 <div class="card-body">
-                    <h5 class="card-title">Agenda tu cita</h5>
+                    <h4 class="card-title">Agenda tu cita</h4>
                     <p class="card-text"><small class="text-muted">5 tips para diferenciar tu barberia</small> </p>
                     <div class="form-floating">
                     <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
@@ -75,7 +95,7 @@
                             <option value="3">Fecha</option>
                             </select>
                             <label for="floatingSelect">Selecciona una fecha</label>
-                            </div>
+                            </div>                           
                 </div>
             </div>
             </div>
